# runique

./: .gitignore  ARCHITECTURE_TRACING.md  CHANGELOG.fr.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO_APP_FIXES.md  Dockerfile  INDEX.md  LICENCE  LICENSE  LICENSE-MIT.md  MODIFICATIONS.md  Makefile.toml  Manquant-v1-to-v2.md  NEW_PROJECT.md  PROJECT_STATUS.en.md  PROJECT_STATUS.md  README.fr.md  README.md  README_2.0.md  README_STRUCTURE_GUIDE.md  REFACTORINGS.md  ROADMAP.md  SECURITY.md  TEST_REPORT.md  admin-preview.html  architecture_current.txt  audit.ps1  audit.toml  benchmark.md  cargo_run_output.txt  clef.env.md  clippy_output.txt  clippy_result.txt  commande.txt  commande_sea_orm.txt  complement_opus_audit.md  compose.yml  (+13 more)
demo-app/: Cargo.toml  README.md  seed.sql  seed_cours.sql  seed_doc.sql  sitemap.xml  test_injection.sh
demo-app/docs/ia/: contrainte_fr.md
demo-app/media/: runique_320.avif  runique_ecran.avif
demo-app/media/favicon/: runique_ecran.xcf
demo-app/migration/: Cargo.toml
demo-app/migration/src/: blog.rs  eihwaz_users.rs  lib.rs  m20260111_130201_test_field.rs  m20260118_003649_create_blog_table.rs  m20260118_003649_create_users_booster_table.rs  m20260118_003649_create_users_table.rs  m20260219_131003_create_test_all_fields_table.rs  m20260219_131003_create_users_booster_table.rs  m20260221_163108_create_eihwaz_users_table.rs  m20260221_163108_create_test_all_fields_table.rs  m20260221_163132_alter_eihwaz_users_table.rs  m20260226_151501_create_blog_table.rs  m20260226_151501_create_eihwaz_users_table.rs  m20260226_152646_alter_eihwaz_users_table.rs  m20260227_143557_create_eihwaz_users_table.rs  m20260227_143557_create_test_all_fields_table.rs  m20260304_145358_alter_test_all_fields_table.rs  m20260304_145358_alter_users_booster_table.rs  m20260304_150108_alter_eihwaz_users_table.rs  m20260318_140408_create_contributions_table.rs  m20260318_140408_create_eihwaz_users_table.rs  m20260318_140408_create_test_all_fields_table.rs  m20260318_140408_create_users_booster_table.rs  m20260318_153933_create_contributions_table.rs  m20260318_153933_create_eihwaz_users_table.rs  m20260318_153933_create_test_all_fields_table.rs  m20260320_122444_create_known_issue_table.rs  m20260320_122444_create_roadmap_entry_table.rs  m20260320_130926_alter_roadmap_entry_table.rs  m20260320_143527_create_code_example_table.rs  m20260320_143527_create_demo_category_table.rs  m20260320_143527_create_demo_page_table.rs  m20260320_143527_create_demo_section_table.rs  m20260320_143527_create_form_field_table.rs  m20260320_143527_create_page_doc_link_table.rs  m20260320_151115_alter_demo_category_table.rs  m20260320_163000_alter_form_field_table.rs  m20260321_000000_create_doc_section_table.rs  m20260321_000001_create_doc_page_table.rs  (+114 more)
demo-app/runique.dump/: runique.dump
demo-app/src/: admin.rs  demo_toggle.rs  form_test.rs  forms.rs  main.rs  prelude.rs  url.rs  views.rs
demo-app/src/admins/: README.md  admin.rs  admin_panel.rs  handlers.rs  mod.rs  router.rs
demo-app/src/backend/: auth.rs  blog.rs  cards.rs  contribution.rs  cour_seed.rs  cours.rs  doc.rs  doc_seed.rs  forms.rs  ia_seed.rs  mod.rs  pages.rs
demo-app/src/entities/: blog.rs  changelog_entry.rs  chapitre.rs  code_example.rs  contrainte_ia.rs  contribution.rs  cour.rs  cour_block.rs  cour_ia.rs  demo_category.rs  demo_page.rs  demo_section.rs  doc_block.rs  doc_page.rs  doc_section.rs  eihwaz_droit.rs  eihwaz_groupe.rs  eihwaz_sessions.rs  eihwaz_users.rs  form_field.rs  known_issue.rs  mod.rs  model_derive.rs  page_doc_link.rs  roadmap_entry.rs  runique_release.rs  site_config.rs  test_all_field.rs  user_profile.rs  users.rs
demo-app/src/formulaire/: blog.rs  changelog_entry.rs  chapitre.rs  code_example.rs  contribution.rs  cour.rs  cour_block.rs  demo_category.rs  demo_page.rs  demo_section.rs  doc_block.rs  doc_page.rs  doc_section.rs  form_field.rs  image.rs  known_issue.rs  login.rs  mod.rs  page_doc_link.rs  roadmap_entry.rs  runique_release.rs  search_demo.rs  site_config.rs  user.rs  username.rs
demo-app/src/models/: Blog.rs  mod.rs  model_derive.rs  test.rs  test_all_field.rs  users.rs
demo-app/static/css/: 502.css  about.css  cours.css  demo-code.css  demo-surcharge.css  doc.css  field_test.css  highlight-github-dark.min.css  inline.css  inscription.css  main.css  profil.css  readme.css  register-form.css  search-user.css  seo.css  test-field.css  test_form.css  variables.css
demo-app/static/js/: analytic.js  cour_detail.js  cour_ia.js  doc-carousel.js  doc-index.js  doc_sidebar.js  field_test.js  footer.js  gtm.js  manager.js  open_section.js  site_nav.js  test_csrf.js  test_field.js  theme.js
demo-app/templates/: erreur_502.html  index.html  inscription_form.html  readme.html  test_champs_form.html  test_new_form.html  test_template.html
examples/demo-app/: .env.example  Cargo.toml
runique/: Cargo.toml  README.md  aliase_change.py
runique/derive_form/: Cargo.toml  README.md
runique/doc-tests/: db_config_module.md  paths_seaorm_file.md  paths_snapshot_dir.md  paths_table_applied.md  sanitizer.md  sanitizer_strict.md
runique/src/: app.rs  app_state.rs  error.rs  lib.rs  response.rs  settings.rs
runique/static/: runique_320.avif
runique/templates/: base_index.html  base_template.html
runique/tests/: README.md  README_INTEGRATION.md  SOURCE_COVERAGE_PLAN.md  allowed_hosts.rs  csp.rs  csrf.rs  diff_migration.rs  flash_message.rs  forms.rs  integration.rs  integration_tests.rs  login.rs  mod.rs  orm.rs  password.rs  routing.rs  sanitization.rs  settings.rs  source_coverage_smoke.rs  test.rs  test_csrf_crypto.rs  test_current_user.rs  test_form_renderer.rs  test_url_registry.rs  testeur.rs  utils.rs
rusti/: Cargo.toml  README.md
rusti/derive_form/: Cargo.toml
rusti/src/: app.rs  error.rs  lib.rs  response.rs  settings.rs
rusti/templates/: base_index.html  message.html
rusti/tests/: allowed_hosts.rs  csp.rs  csrf.rs  flash_message.rs  forms.rs  login.rs  orm.rs  routing.rs  sanitization.rs  settings.rs  test_flash_message.rs  test_orm.rs  utils.rs
(+1806 files in other folders)
