[workspace]
members = [
    "rusti",
    "rusti/derive_form",
    "examples/demo-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Itsuki"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Framework web
axum = { version = "0.8.7", features = ["macros", "form"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "util", "trace", "timeout"] }
tower-sessions = "0.14.0"

# Runtime async
tokio = { version = "1", features = ["full"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templates
tera = { version = "1.20.1", features = ["builtins"] }

# ORM
sea-orm = { version = "2.0.0-rc.18", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio", "macros", "with-chrono", "with-uuid"] }

# Utilitaires
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "=1.12.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
async-trait = "0.1"
once_cell = "1.20"

# Validator de champs
validator = { version = "0.18", features = ["derive"] }
urlencoding = "2.1.3"
byte = "0.2.7"
http-body-util = "0.1"
argon2 = "0.5"
password-hash = "0.6.0-rc.3"
rand = "0.9"
serde_urlencoded = "0.7"
