[workspace]
members = [
    "runique",
    "demo-app",
    "demo-app/migration",
]
resolver = "2"

[workspace.package]
version = "1.1.11"
edition = "2021"
authors = ["Itsuki"]
license = "MIT"
repository = "https://github.com/seb-alliot/runique"
homepage = "https://github.com/seb-alliot/runique"

[workspace.dependencies]
# Framework web
axum = { version = "0.8.7", features = ["macros", "form" ,"multipart"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "util", "trace", "timeout"] }
tower-sessions = "0.14.0"

# Runtime async
tokio = { version = "1", features = ["full"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Templates
tera = { version = "1.20.1", features = ["builtins"] }
indexmap = { version = "2.13.0", features = ["serde"] }
# ORM
sea-orm = { version = "2.0.0-rc.18" }
sea-orm-cli = "1.1.19"

# Utilitaires
dotenvy = "0.15"
chrono = { version = "0.4.43", features = ["serde"] }
anyhow = "1.0"
regex = "1.12.2"
fancy-regex = "0.17.0"
urlencoding = "2.1.3"
byte = "0.2.7"
http-body-util = "0.1"
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4"] }
futures-util = "0.3.31"
phonenumber = "0.3.9"
country = "0.5.0"
postal-code = "0.3.0"
dyn-clone = "1.0.20"

# Logging
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.18"

# Async
async-trait = "0.1"
once_cell = "1.20"

# Validation et sécurité

validator = { version = "0.20", features = ["derive", "phone", "url"] }
argon2 = "0.5"
password-hash = "0.6.0-rc.3"
rand = "0.9"
ammonia = "4.1.2"

# CLI
clap = { version = "4.5.55", features = ["derive"] }