[package]
name = "demo-app"
version = "1.0.0"
edition = "2024"

[dependencies]

# Base de données : sqlite (défaut) | postgres | mysql | mariadb | all-databases
# en prod => runique = { version = "1.1.52", features = ["orm", "postgres"] }
# en local
runique = { path = "../runique", features = ["orm", "postgres"] }

serde ="1"

chrono = "0.4"
tracing-subscriber = "0.3.22"
sea-orm = "=2.0.0-rc.32"
sea-orm-migration = "=2.0.0-rc.32"
