[package]
name = "demo-app"
version = "1.0.0"
edition = "2024"

[dependencies]

# Base de données : sqlite (défaut) | postgres | mysql | mariadb | all-databases
# en prod => runique = { version = "2.0.1", features = ["orm", "postgres"] }
# en local
runique = { path = "../runique", features = ["orm", "postgres"] }

serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

chrono = "0.4"
tracing-subscriber = "0.3.22"
sea-orm = "=2.0.0-rc.38"
sea-orm-migration = "=2.0.0-rc.38"
