[package]
name = "demo-app"
version = "1.0.0"
edition = "2024"

[dependencies]

# Base de données : sqlite (défaut) | postgres | mysql | mariadb | all-databases
runique = { path = "../runique", features = ["orm", "postgres", "acme"] }

serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }

chrono = "0.4"
tracing-subscriber = "0.3.22"
sea-orm = "=2.0.0-rc.40"
sea-orm-migration = { version = "=2.0.0-rc.40" }
