[package]
name = "runique"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A Django-inspired web framework for Rust with ORM, templates, and comprehensive security middleware"
keywords = ["web", "framework", "django", "orm", "runique"]
categories = ["web-programming::http-server"]
readme = "../README.md"
documentation = "https://docs.rs/runique"

exclude = [
    "tests/*",
    "**/*.db",
    "**/*.sqlite",
    "**/target/*",
]

[lib]
name = "runique"
path = "src/lib.rs"

[dependencies]
# Framework web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true

# Sécurity
urlencoding.workspace = true
byte.workspace = true
http-body-util.workspace = true
ammonia.workspace = true
# gestion password
argon2.workspace = true
password-hash.workspace = true
rand.workspace = true

# Runtime async
tokio.workspace = true

# Sérialisation
serde.workspace = true
serde_json.workspace = true

# Templates
tera.workspace = true
glob = "0.3"
indexmap.workspace = true
# ORM
sea-orm = { workspace = true, optional = true }
sea-orm-cli.workspace = true

# Utilitaires
dotenvy.workspace = true
chrono.workspace = true
anyhow.workspace = true
regex.workspace = true
serde_urlencoded.workspace = true
fancy-regex.workspace = true
uuid.workspace = true
futures-util.workspace = true
phonenumber.workspace = true
country.workspace = true
postal-code.workspace = true
dyn-clone.workspace = true

# Logging
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

# Async
async-trait.workspace = true
once_cell.workspace = true

# Validation et sécurité
validator = { version = "0.20", features = ["derive"] }

# CSRF
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64.workspace = true

# macro externe
derive_form = { path = "derive_form", version = "1.1.0" }

# cli
clap.workspace = true

[features]
default = ["orm"]
orm = ["dep:sea-orm"]
sqlite = ["orm", "sea-orm/sqlx-sqlite", "sea-orm/runtime-tokio-rustls"]
postgres = ["orm", "sea-orm/sqlx-postgres", "sea-orm/runtime-tokio-rustls"]
mysql = ["orm", "sea-orm/sqlx-mysql", "sea-orm/runtime-tokio-rustls"]
mariadb = ["mysql"]
all-databases = ["sqlite", "postgres", "mysql"]