[package]
name = "rusti"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A Django-inspired web framework for Rust"
keywords = ["web", "framework", "axum", "django"]
categories = ["web-programming::http-server"]

[dependencies]
# Framework web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true

# Runtime async
tokio.workspace = true

# Sérialisation
serde.workspace = true
serde_json.workspace = true

# Templates
tera.workspace = true
glob = "0.3"

# ORM
sea-orm = { workspace = true, optional = true }

# Utilitaires
dotenvy.workspace = true
chrono.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async
async-trait.workspace = true
once_cell.workspace = true

[features]
default = ["orm", "sqlite"]
orm = ["dep:sea-orm"]

# Bases de données
sqlite = ["sea-orm?/sqlx-sqlite", "sea-orm?/runtime-tokio-rustls"]
postgres = ["sea-orm?/sqlx-postgres", "sea-orm?/runtime-tokio-rustls"]
mysql = ["sea-orm?/sqlx-mysql", "sea-orm?/runtime-tokio-rustls"]

# Alias pour MariaDB
mariadb = ["mysql"]

# Feature pour activer toutes les BDD
all-databases = ["sqlite", "postgres", "mysql"]