[package]
name = "rusti"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A Django-inspired web framework for Rust"
keywords = ["web", "framework", "axum", "django"]
categories = ["web-programming::http-server"]


[dependencies]
# Framework web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
# Sécurity
urlencoding.workspace = true
byte.workspace = true
http-body-util.workspace = true

# gestion password
argon2.workspace = true
password-hash.workspace = true
rand.workspace = true

# Runtime async
tokio.workspace = true

# Sérialisation
serde.workspace = true
serde_json.workspace = true

# Templates
tera.workspace = true
glob = "0.3"

# ORM
sea-orm = { workspace = true, optional = true }
sea-orm-cli.workspace = true

# Utilitaires
dotenvy.workspace = true
chrono.workspace = true
anyhow.workspace = true
regex.workspace = true
serde_urlencoded.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async
async-trait.workspace = true
once_cell.workspace = true


# CSRF
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# macro externe
derive_form = { path = "derive_form" }


[features]
orm = ["dep:sea-orm"]

sqlite = ["orm", "sea-orm?/sqlx-sqlite", "sea-orm?/runtime-tokio-rustls"]
postgres = ["orm", "sea-orm?/sqlx-postgres", "sea-orm?/runtime-tokio-rustls"]  # ← Ajouter "orm"
mysql = ["orm", "sea-orm?/sqlx-mysql", "sea-orm?/runtime-tokio-rustls"]

# Alias pour MariaDB
mariadb = ["mysql"]

# Feature pour activer toutes les BDD
all-databases = ["sqlite", "postgres", "mysql"]
