[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

[dependencies]

# Base de données : sqlite (défaut) | postgres | mysql | mariadb | all-databases
rusti = { path = "../../rusti", features = ["orm", "postgres"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
fancy-regex = "0.11"

chrono = "0.4"

sea-orm-migration.workspace = true
