[package]
name = "{{PROJECT_NAME}}"
version = "1.0.0"
edition = "2021"

[dependencies]

# Base de données : sqlite (défaut) | postgres | mysql | mariadb | all-databases
# en prod => runique = { version = "1.0.8", features = ["orm", "postgres"] }
runique = { path = "../runique", features = ["orm", "sqlite"] }

serde ="1"

chrono = "0.4"
tracing-subscriber.workspace = true
